cluster/manifests/homepage/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: homepage
    app.kubernetes.io/service: homepage
    app.kubernetes.io/version: v1.2.0
    helm.sh/chart: homepage-2.1.0
  name: homepage
  namespace: homepage
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
  type: ClusterIP
