cluster/manifests/homepage/homepage-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
  - privateweb
  - privatesecure
  - wgweb
  - wgsecure
  routes:
  - kind: Rule
    match: Host(`home.lan.ftzmlab.xyz`)
    services:
    - name: homepage
      port: 3000
  tls: {}
